--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website for free</a></section><section class="cid-s0Cm5JWGxq" id="video1-2h">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="cid-s0Cm5JWGxq" id="video1-2h">
 
     
     
     <figure class="mbr-figure align-center container">
         <div class="video-block" style="width: 66%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/uC7393qlHb8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/uC7393qlHb8?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
