--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="cid-s0Cm5JWGxq" id="video1-2h">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-s0Cm5JWGxq" id="video1-2h">
 
     
     
-    <figure class="mbr-figure align-center">
-        <div class="video-block" style="width: 66%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/uC7393qlHb8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+    <figure class="mbr-figure align-center container">
+        <div class="video-block" style="width: 100%;">
+            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/uC7393qlHb8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="800" height="600" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
@@ -101,7 +101,7 @@
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">&gt; Interpretação de exames;
 <br>=&gt; Orientação em situações emergenciais;
 <br>=&gt; Interpretação de bula de medicamentos;
-<br>=&gt; Esclarecerr dúvidas sobre medicamentos;
+<br>=&gt; Esclarecer dúvidas sobre medicamentos;
 <br>=&gt; Esclarecer dúvidas ou inquietações sobre saúde;
 <br>=&gt; Interpretação de prescrições de medicamentos e exames;
 <br>=&gt; Orientação na procura de um médico especializado ou um pronto-atendimento.&nbsp;</p>
@@ -788,7 +788,7 @@ Indicação do Prestador via Geolocalização, tudo de acordo com a possibilidad
   <script src="assets/slidervideo/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
